Definido o tema e adicionado imagem para o cabeçalho.

--- a/web/templates/cabecalho.xhtml
+++ b/web/templates/cabecalho.xhtml
@@ -10,10 +10,10 @@
 
             <div id="areaLogo" style="float: left;">
 
-                <p:graphicImage width="300px" height="66px" value="/images/logo.png" style="margin-top: 10px;"/>
+                <p:graphicImage width="100px" height="66px" value="/images/logo.png" style="margin-top: 10px;"/>
             </div>
 
-            <div id="areaTitulo"  style="float: left; width: 460px; margin-left: 20%; alignment-baseline: central; text-align: center;">
+            <div id="areaTitulo"  style="float: left; width: 460px; margin-left: 380px; alignment-baseline: central; text-align: center;">
                 <h:panelGrid columns="1" >
 
                     <h:outputText value="Tic Tac" 
