- login funcionando; - o objeto está sendo setado na sessão; - falta destruir o objeto da sessão;

--- a/web/templates/cabecalho.xhtml
+++ b/web/templates/cabecalho.xhtml
@@ -16,7 +16,7 @@
             <div id="areaTitulo"  style="float: left; width: 460px; margin-left: 380px; alignment-baseline: central; text-align: center;">
                 <h:panelGrid columns="1" >
 
-                    <h:outputText value="Tic Tac" 
+                    <h:outputText value="Tic Tac Toe" 
                                   style="font-size: xx-large; font-weight: bold"/>
                     <h:outputText value="Jogo da Velha - Interdiscplinar" 
                                   style="font-size: x-large;  font-style: italic;"/>
