Adicionado o algoritmo MiniMax.

--- a/web/templates/template.xhtml
+++ b/web/templates/template.xhtml
@@ -9,6 +9,7 @@
         <h:head>
             <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
             <title>
+                <h:outputStylesheet library="default" name="/resource/default/css/css_interdisciplinar.css"/>
                 <h:outputText value="TIC TAC TOE"/>
             </title>            
         </h:head>
