--- a/web/templates/template.xhtml
+++ b/web/templates/template.xhtml
@@ -8,8 +8,9 @@
     <f:view contentType="text/html" encoding="UTF-8">
         <h:head>
             <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
+            <h:outputScript library="default" name="js/js_jogo.js"/>
             <title>
-                <h:outputStylesheet library="default" name="/resource/default/css/css_interdisciplinar.css"/>
+                <h:outputStylesheet library="default" name="css/css_interdisciplinar.css"/>
                 <h:outputText value="TIC TAC TOE"/>
             </title>            
         </h:head>
