--- a/web/templates/cabecalho.xhtml
+++ b/web/templates/cabecalho.xhtml
@@ -18,7 +18,7 @@
 
                     <h:outputText value="Tic Tac Toe" 
                                   style="font-size: xx-large; font-weight: bold"/>
-                    <h:outputText value="Jogo da Velha - Interdiscplinar" 
+                    <h:outputText value="Jogo da Velha - Interdisciplinar 2014/1" 
                                   style="font-size: x-large;  font-style: italic;"/>
                 </h:panelGrid>
             </div>
