--- a/web/templates/rodape.xhtml
+++ b/web/templates/rodape.xhtml
@@ -2,9 +2,9 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:h="http://java.sun.com/jsf/html">
     <p:panel style="height: 35px; text-align: center; position: fixed; bottom: 6px; right: 6px; left: 6px; padding-bottom: 15px;">
-        <h:outputText value="#{msg.Roda_pe}" style="font-size: 12px" escape="false"/>
+        <h:outputText value="Todos os créditos reservados a Felipe Appio - 2014" style="font-size: 12px" escape="false"/>
         
-        <h:outputText value="Versão: ${versao}" style="position: absolute; bottom: 2px; right: 5px; font-size: 12px"/>        
+        <h:outputText value="Versão: 1.0" style="position: absolute; bottom: 2px; right: 5px; font-size: 12px"/>        
     </p:panel>
 </ui:composition>
 
