--- a/web/templates/template.xhtml
+++ b/web/templates/template.xhtml
@@ -8,6 +8,8 @@
     <f:view contentType="text/html" encoding="UTF-8">
         <h:head>
             <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
+            <script type="text/javascript" src="/interdisciplinar/dwr/engine.js"></script>
+            <script type="text/javascript" src="/interdisciplinar/dwr/interface/Mensagem.js"></script>
             <title>
                 <h:outputStylesheet library="default" name="css/css_interdisciplinar.css"/>
                 <h:outputText value="TIC TAC TOE"/>
