Minimax começando a funfar.

--- a/web/templates/template.xhtml
+++ b/web/templates/template.xhtml
@@ -10,6 +10,8 @@
             <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
             <script type="text/javascript" src="/interdisciplinar/dwr/engine.js"></script>
             <script type="text/javascript" src="/interdisciplinar/dwr/interface/Mensagem.js"></script>
+            <script type="text/javascript" src="/interdisciplinar/dwr/interface/Game.js"></script>
+            <script type="text/javascript" src="/interdisciplinar/dwr/interface/GameState.js"></script>
             <title>
                 <h:outputStylesheet library="default" name="css/css_interdisciplinar.css"/>
                 <h:outputText value="TIC TAC TOE"/>
