CPF calculando dígitos verificadores.

--- a/web/templates/menu.xhtml
+++ b/web/templates/menu.xhtml
@@ -34,7 +34,7 @@
                 <p:commandButton value="Sim"
                                  action="#{loginBean.logout()}"
                                  type="button"
-                                 ajax="false"/>                
+                                 ajax="true"/>                
                 <p:commandButton value="Não" 
                                  type="button"
                                  onclick="dlgSair.hide()"/>  
