--- a/web/templates/menu.xhtml
+++ b/web/templates/menu.xhtml
@@ -8,11 +8,23 @@
             <p:submenu label="Usuário">
                 <p:menuitem value="Cadastro"
                             url="/usuario/cadUsuario.jsf"/>
+
+                <p:menuitem value="Relatório"
+                            rendered="#{not loginBean.userSession eq null}"
+                            actionListener="#{usuarioBean.geraRelatorio()}"/>
+
+                <p:menuitem value="Ranking"
+                            rendered="#{not loginBean.userSession eq null}"
+                            actionListener="/usuario/dataTableUsuario"/>
             </p:submenu>
 
             <p:submenu label="Jogo">
                 <p:menuitem value="Jogar"
-                            url="/game/jogo.jsf"/>
+                            rendered="#{loginBean.admin}"
+                            url="/sistema/game/jogo.jsf"/>
+
+                <p:menuitem value="Ranking"
+                            url="/game/ranking.jsf"/>
             </p:submenu>
 
             <p:submenu label="#{loginBean.userSession.nome}"
