--- a/web/templates/menu.xhtml
+++ b/web/templates/menu.xhtml
@@ -26,7 +26,7 @@
                             url="/game/jogoPVP.jsf"/>
 
                 <p:menuitem value="Ranking"
-                            url="/game/ranking.jsf"/>
+                            url="/usuario/dataTableUsuario.jsf"/>
             </p:submenu>
 
             <p:submenu label="#{loginBean.userSession.nome}"
